--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Is It #000000?</title>
+    <script src="https://analytics.gennari.industries/api/script.js" data-site-id="5" defer></script>
   </head>
   <body>
     <div id="app"></div>
